tests/script_errors/imut_bad_emit/error.txt
Error: 
    1 | #   Bad to the bone
    2 | match "dont-care" of
    3 |   case "dont-care" when emit "error" => "ouch"
      |                         ^^^^ Found the token `emit` but expected one of `!`, `"`, `$`, `(`, `+`, `-`, `<<`, `<ident>`, `[`, `absent`, `args`, `bool`, `event`, `float`, `for`, `group`, `"""`, `int`, `match`, `merge`, `nil`, `not`, `patch`, `present`, `recur`, `state`, `window`, `{`
      |                              NOTE: It looks like you tried to use 'emit' as an ident, consider quoting it as `emit` to make it an identifier.
    4 |   case _ => "ouch"
    5 | end